# NaoTalk_cpp

./: CMakeLists.txt  README.md  qiproject.xml
include/: demo.h  recognizer.h  spark.h  tactile.h  thinkMotion.h
libs/cmake/: libmsc-config.cmake
src/: demo.c  givenAns.txt  main.cpp  rec.c  recognizer.c  spark.cpp  tactile.cpp  thinkMotion.cpp
